src/frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOT
    KEYWORD_CONTINUE
    SYSTEM_EXIT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     function_definition -> type_specifier IDENTIFIER LPAREN params RPAREN block_statement
Rule 3     params -> param_list
Rule 4     params -> empty
Rule 5     param_list -> param
Rule 6     param_list -> param_list COMMA param
Rule 7     param -> type_specifier IDENTIFIER
Rule 8     statement_list -> statement
Rule 9     statement_list -> statement_list statement
Rule 10    statement -> declaration_statement
Rule 11    statement -> assignment_statement
Rule 12    statement -> if_statement
Rule 13    statement -> while_statement
Rule 14    statement -> do_while_statement
Rule 15    statement -> for_statement
Rule 16    statement -> switch_statement
Rule 17    statement -> break_statement
Rule 18    statement -> return_statement
Rule 19    statement -> function_call_statement
Rule 20    statement -> block_statement
Rule 21    statement -> function_definition
Rule 22    do_while_statement -> KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN SEMICOLON
Rule 23    switch_statement -> KEYWORD_SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
Rule 24    case_list -> case_clause
Rule 25    case_list -> case_list case_clause
Rule 26    case_clause -> KEYWORD_CASE expression COLON statement_list
Rule 27    case_clause -> KEYWORD_DEFAULT COLON statement_list
Rule 28    break_statement -> KEYWORD_BREAK SEMICOLON
Rule 29    declaration_statement -> type_specifier IDENTIFIER SEMICOLON
Rule 30    declaration_statement -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 31    declaration_statement -> type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
Rule 32    declaration_statement -> type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN initializer_list SEMICOLON
Rule 33    declaration_statement -> type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN initializer_list SEMICOLON
Rule 34    declaration_statement -> type_specifier IDENTIFIER LBRACKET RBRACKET SEMICOLON
Rule 35    type_specifier -> primitive_type
Rule 36    type_specifier -> array_type
Rule 37    primitive_type -> KEYWORD_INT
Rule 38    primitive_type -> KEYWORD_FLOAT
Rule 39    primitive_type -> KEYWORD_CHAR
Rule 40    primitive_type -> KEYWORD_VOID
Rule 41    primitive_type -> KEYWORD_STRING
Rule 42    primitive_type -> KEYWORD_BOOL
Rule 43    primitive_type -> KEYWORD_FILE
Rule 44    primitive_type -> KEYWORD_SOCKET
Rule 45    primitive_type -> KEYWORD_DICT
Rule 46    primitive_type -> KEYWORD_ARRAY
Rule 47    array_type -> primitive_type LBRACKET RBRACKET
Rule 48    assignment_statement -> left_hand_side ASSIGN expression SEMICOLON
Rule 49    left_hand_side -> IDENTIFIER
Rule 50    left_hand_side -> subscript_access
Rule 51    assignment_statement_no_semi -> left_hand_side ASSIGN expression
Rule 52    if_statement -> KEYWORD_IF LPAREN expression RPAREN statement
Rule 53    if_statement -> KEYWORD_IF LPAREN expression RPAREN statement KEYWORD_ELSE statement
Rule 54    while_statement -> KEYWORD_WHILE LPAREN expression RPAREN statement
Rule 55    for_statement -> KEYWORD_FOR LPAREN for_init expression_opt SEMICOLON expression_opt RPAREN statement
Rule 56    for_init -> assignment_statement_no_semi SEMICOLON
Rule 57    for_init -> declaration_statement
Rule 58    for_init -> SEMICOLON
Rule 59    expression_statement -> expression SEMICOLON
Rule 60    expression_statement -> SEMICOLON
Rule 61    expression_opt -> expression
Rule 62    expression_opt -> assignment_statement_no_semi
Rule 63    expression_opt -> empty
Rule 64    empty -> <empty>
Rule 65    return_statement -> KEYWORD_RETURN SEMICOLON
Rule 66    return_statement -> KEYWORD_RETURN expression SEMICOLON
Rule 67    function_call_statement -> function_call SEMICOLON
Rule 68    function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 69    function_call -> IDENTIFIER LPAREN RPAREN
Rule 70    function_call -> SYSTEM_INPUT LPAREN IDENTIFIER COMMA type_specifier RPAREN
Rule 71    function_call -> SYSTEM_OUTPUT LPAREN expression COMMA type_specifier RPAREN
Rule 72    function_call -> SYSTEM_OUTPUT LPAREN expression COMMA type_specifier COMMA expression RPAREN
Rule 73    function_call -> KEYWORD_EXIT LPAREN RPAREN
Rule 74    function_call -> SYSTEM_ARR_PUSH LPAREN expression COMMA expression RPAREN
Rule 75    function_call -> SYSTEM_ARR_POP LPAREN expression RPAREN
Rule 76    function_call -> SYSTEM_ARR_SIZE LPAREN expression RPAREN
Rule 77    function_call -> SYSTEM_ARR_CONTAINS LPAREN expression COMMA expression RPAREN
Rule 78    function_call -> SYSTEM_ARR_INDEXOF LPAREN expression COMMA expression RPAREN
Rule 79    function_call -> SYSTEM_ARR_AVG LPAREN expression RPAREN
Rule 80    function_call -> SYSTEM_ARR_AVG LPAREN expression COMMA expression RPAREN
Rule 81    argument_list -> expression
Rule 82    argument_list -> argument_list COMMA expression
Rule 83    block_statement -> LBRACE RBRACE
Rule 84    block_statement -> LBRACE statement_list RBRACE
Rule 85    initializer_list -> LBRACKET expression_list_opt RBRACKET
Rule 86    expression_list_opt -> expression_list
Rule 87    expression_list_opt -> empty
Rule 88    expression_list -> expression
Rule 89    expression_list -> expression_list COMMA expression
Rule 90    expression -> logical_expression
Rule 91    expression -> initializer_list
Rule 92    logical_expression -> equality_expression
Rule 93    logical_expression -> logical_expression AND equality_expression
Rule 94    logical_expression -> logical_expression OR equality_expression
Rule 95    equality_expression -> relational_expression
Rule 96    equality_expression -> equality_expression EQ relational_expression
Rule 97    equality_expression -> equality_expression NEQ relational_expression
Rule 98    relational_expression -> additive_expression
Rule 99    relational_expression -> relational_expression GT additive_expression
Rule 100   relational_expression -> relational_expression LT additive_expression
Rule 101   relational_expression -> relational_expression GEQ additive_expression
Rule 102   relational_expression -> relational_expression LEQ additive_expression
Rule 103   additive_expression -> multiplicative_expression
Rule 104   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 105   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 106   multiplicative_expression -> unary_expression
Rule 107   multiplicative_expression -> multiplicative_expression MUL unary_expression
Rule 108   multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 109   multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 110   unary_expression -> primary_expression
Rule 111   unary_expression -> MINUS unary_expression
Rule 112   primary_expression -> IDENTIFIER
Rule 113   primary_expression -> INT_LITERAL
Rule 114   primary_expression -> FLOAT_LITERAL
Rule 115   primary_expression -> STRING_LITERAL
Rule 116   primary_expression -> CHAR_LITERAL
Rule 117   primary_expression -> KEYWORD_TRUE
Rule 118   primary_expression -> KEYWORD_FALSE
Rule 119   primary_expression -> KEYWORD_NULL
Rule 120   primary_expression -> LPAREN expression RPAREN
Rule 121   primary_expression -> function_call
Rule 122   primary_expression -> subscript_access
Rule 123   primary_expression -> dictionary_literal
Rule 124   dictionary_literal -> LBRACE key_value_list_opt RBRACE
Rule 125   key_value_list_opt -> key_value_list
Rule 126   key_value_list_opt -> empty
Rule 127   key_value_list -> key_value
Rule 128   key_value_list -> key_value_list COMMA key_value
Rule 129   key_value -> expression COLON expression
Rule 130   subscript_access -> IDENTIFIER LBRACKET expression RBRACKET

Terminals, with rules where they appear

AND                  : 93
ASSIGN               : 30 32 33 48 51
CHAR_LITERAL         : 116
COLON                : 26 27 129
COMMA                : 6 70 71 72 72 74 77 78 80 82 89 128
COMMENT              : 
DIV                  : 108
DOT                  : 
EQ                   : 96
FLOAT_LITERAL        : 114
GEQ                  : 101
GT                   : 99
IDENTIFIER           : 2 7 29 30 31 32 33 34 49 68 69 70 112 130
INT_LITERAL          : 113
KEYWORD_ARRAY        : 46
KEYWORD_BOOL         : 42
KEYWORD_BREAK        : 28
KEYWORD_CASE         : 26
KEYWORD_CHAR         : 39
KEYWORD_CONTINUE     : 
KEYWORD_DEFAULT      : 27
KEYWORD_DICT         : 45
KEYWORD_DO           : 22
KEYWORD_ELSE         : 53
KEYWORD_EXIT         : 73
KEYWORD_FALSE        : 118
KEYWORD_FILE         : 43
KEYWORD_FLOAT        : 38
KEYWORD_FOR          : 55
KEYWORD_IF           : 52 53
KEYWORD_INT          : 37
KEYWORD_NULL         : 119
KEYWORD_RETURN       : 65 66
KEYWORD_SOCKET       : 44
KEYWORD_STRING       : 41
KEYWORD_SWITCH       : 23
KEYWORD_TRUE         : 117
KEYWORD_VOID         : 40
KEYWORD_WHILE        : 22 54
LBRACE               : 23 83 84 124
LBRACKET             : 31 32 33 34 47 85 130
LEQ                  : 102
LPAREN               : 2 22 23 52 53 54 55 68 69 70 71 72 73 74 75 76 77 78 79 80 120
LT                   : 100
MINUS                : 105 111
MOD                  : 109
MUL                  : 107
NEQ                  : 97
OR                   : 94
PLUS                 : 104
RBRACE               : 23 83 84 124
RBRACKET             : 31 32 33 34 47 85 130
RPAREN               : 2 22 23 52 53 54 55 68 69 70 71 72 73 74 75 76 77 78 79 80 120
SEMICOLON            : 22 28 29 30 31 32 33 34 48 55 56 58 59 60 65 66 67
STRING_LITERAL       : 115
SYSTEM_ARR_AVG       : 79 80
SYSTEM_ARR_CONTAINS  : 77
SYSTEM_ARR_INDEXOF   : 78
SYSTEM_ARR_POP       : 75
SYSTEM_ARR_PUSH      : 74
SYSTEM_ARR_SIZE      : 76
SYSTEM_EXIT          : 
SYSTEM_INPUT         : 70
SYSTEM_OUTPUT        : 71 72
error                : 

Nonterminals, with rules where they appear

additive_expression  : 98 99 100 101 102 104 105
argument_list        : 68 82
array_type           : 36
assignment_statement : 11
assignment_statement_no_semi : 56 62
block_statement      : 2 20
break_statement      : 17
case_clause          : 24 25
case_list            : 23 25
declaration_statement : 10 57
dictionary_literal   : 123
do_while_statement   : 14
empty                : 4 63 87 126
equality_expression  : 92 93 94 96 97
expression           : 22 23 26 30 31 32 48 51 52 53 54 59 61 66 71 72 72 74 74 75 76 77 77 78 78 79 80 80 81 82 88 89 120 129 129 130
expression_list      : 86 89
expression_list_opt  : 85
expression_opt       : 55 55
expression_statement : 
for_init             : 55
for_statement        : 15
function_call        : 67 121
function_call_statement : 19
function_definition  : 21
if_statement         : 12
initializer_list     : 32 33 91
key_value            : 127 128
key_value_list       : 125 128
key_value_list_opt   : 124
left_hand_side       : 48 51
logical_expression   : 90 93 94
multiplicative_expression : 103 104 105 107 108 109
param                : 5 6
param_list           : 3 6
params               : 2
primary_expression   : 110
primitive_type       : 35 47
program              : 0
relational_expression : 95 96 97 99 100 101 102
return_statement     : 18
statement            : 8 9 22 52 53 53 54 55
statement_list       : 1 9 26 27 84
subscript_access     : 50 122
switch_statement     : 16
type_specifier       : 2 7 29 30 31 32 33 34 70 71 72
unary_expression     : 106 107 108 109 111
while_statement      : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (8) statement_list -> . statement
    (9) statement_list -> . statement_list statement
    (10) statement -> . declaration_statement
    (11) statement -> . assignment_statement
    (12) statement -> . if_statement
    (13) statement -> . while_statement
    (14) statement -> . do_while_statement
    (15) statement -> . for_statement
    (16) statement -> . switch_statement
    (17) statement -> . break_statement
    (18) statement -> . return_statement
    (19) statement -> . function_call_statement
    (20) statement -> . block_statement
    (21) statement -> . function_definition
    (29) declaration_statement -> . type_specifier IDENTIFIER SEMICOLON
    (30) declaration_statement -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (31) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (32) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN initializer_list SEMICOLON
    (33) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN initializer_list SEMICOLON
    (34) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET SEMICOLON
    (48) assignment_statement -> . left_hand_side ASSIGN expression SEMICOLON
    (52) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement
    (53) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement KEYWORD_ELSE statement
    (54) while_statement -> . KEYWORD_WHILE LPAREN expression RPAREN statement
    (22) do_while_statement -> . KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN SEMICOLON
    (55) for_statement -> . KEYWORD_FOR LPAREN for_init expression_opt SEMICOLON expression_opt RPAREN statement
    (23) switch_statement -> . KEYWORD_SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (28) break_statement -> . KEYWORD_BREAK SEMICOLON
    (65) return_statement -> . KEYWORD_RETURN SEMICOLON
    (66) return_statement -> . KEYWORD_RETURN expression SEMICOLON
    (67) function_call_statement -> . function_call SEMICOLON
    (83) block_statement -> . LBRACE RBRACE
    (84) block_statement -> . LBRACE statement_list RBRACE
    (2) function_definition -> . type_specifier IDENTIFIER LPAREN params RPAREN block_statement
    (35) type_specifier -> . primitive_type
    (36) type_specifier -> . array_type
    (49) left_hand_side -> . IDENTIFIER
    (50) left_hand_side -> . subscript_access
    (68) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (69) function_call -> . IDENTIFIER LPAREN RPAREN
    (70) function_call -> . SYSTEM_INPUT LPAREN IDENTIFIER COMMA type_specifier RPAREN
    (71) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier RPAREN
    (72) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier COMMA expression RPAREN
    (73) function_call -> . KEYWORD_EXIT LPAREN RPAREN
    (74) function_call -> . SYSTEM_ARR_PUSH LPAREN expression COMMA expression RPAREN
    (75) function_call -> . SYSTEM_ARR_POP LPAREN expression RPAREN
    (76) function_call -> . SYSTEM_ARR_SIZE LPAREN expression RPAREN
    (77) function_call -> . SYSTEM_ARR_CONTAINS LPAREN expression COMMA expression RPAREN
    (78) function_call -> . SYSTEM_ARR_INDEXOF LPAREN expression COMMA expression RPAREN
    (79) function_call -> . SYSTEM_ARR_AVG LPAREN expression RPAREN
    (80) function_call -> . SYSTEM_ARR_AVG LPAREN expression COMMA expression RPAREN
    (37) primitive_type -> . KEYWORD_INT
    (38) primitive_type -> . KEYWORD_FLOAT
    (39) primitive_type -> . KEYWORD_CHAR
    (40) primitive_type -> . KEYWORD_VOID
    (41) primitive_type -> . KEYWORD_STRING
    (42) primitive_type -> . KEYWORD_BOOL
    (43) primitive_type -> . KEYWORD_FILE
    (44) primitive_type -> . KEYWORD_SOCKET
    (45) primitive_type -> . KEYWORD_DICT
    (46) primitive_type -> . KEYWORD_ARRAY
    (47) array_type -> . primitive_type LBRACKET RBRACKET
    (130) subscript_access -> . IDENTIFIER LBRACKET expression RBRACKET

    KEYWORD_IF      shift and go to state 19
    KEYWORD_WHILE   shift and go to state 20
    KEYWORD_DO      shift and go to state 21
    KEYWORD_FOR     shift and go to state 22
    KEYWORD_SWITCH  shift and go to state 23
    KEYWORD_BREAK   shift and go to state 25
    KEYWORD_RETURN  shift and go to state 26
    LBRACE          shift and go to state 24
    IDENTIFIER      shift and go to state 17
    SYSTEM_INPUT    shift and go to state 31
    SYSTEM_OUTPUT   shift and go to state 32
    KEYWORD_EXIT    shift and go to state 33
    SYSTEM_ARR_PUSH shift and go to state 34
    SYSTEM_ARR_POP  shift and go to state 35
    SYSTEM_ARR_SIZE shift and go to state 36
    SYSTEM_ARR_CONTAINS shift and go to state 37
    SYSTEM_ARR_INDEXOF shift and go to state 38
    SYSTEM_ARR_AVG  shift and go to state 39
    KEYWORD_INT     shift and go to state 40
    KEYWORD_FLOAT   shift and go to state 41
    KEYWORD_CHAR    shift and go to state 42
    KEYWORD_VOID    shift and go to state 43
    KEYWORD_STRING  shift and go to state 44
    KEYWORD_BOOL    shift and go to state 45
    KEYWORD_FILE    shift and go to state 46
    KEYWORD_SOCKET  shift and go to state 47
    KEYWORD_DICT    shift and go to state 48
    KEYWORD_ARRAY   shift and go to state 49

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration_statement          shift and go to state 4
    assignment_statement           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    switch_statement               shift and go to state 10
    break_statement                shift and go to state 11
    return_statement               shift and go to state 12
    function_call_statement        shift and go to state 13
    block_statement                shift and go to state 14
    function_definition            shift and go to state 15
    type_specifier                 shift and go to state 16
    left_hand_side                 shift and go to state 18
    function_call                  shift and go to state 27
    primitive_type                 shift and go to state 28
    array_type                     shift and go to state 29
    subscript_access               shift and go to state 30

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (9) statement_list -> statement_list . statement
    (10) statement -> . declaration_statement
    (11) statement -> . assignment_statement
    (12) statement -> . if_statement
    (13) statement -> . while_statement
    (14) statement -> . do_while_statement
    (15) statement -> . for_statement
    (16) statement -> . switch_statement
    (17) statement -> . break_statement
    (18) statement -> . return_statement
    (19) statement -> . function_call_statement
    (20) statement -> . block_statement
    (21) statement -> . function_definition
    (29) declaration_statement -> . type_specifier IDENTIFIER SEMICOLON
    (30) declaration_statement -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (31) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (32) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN initializer_list SEMICOLON
    (33) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN initializer_list SEMICOLON
    (34) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET SEMICOLON
    (48) assignment_statement -> . left_hand_side ASSIGN expression SEMICOLON
    (52) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement
    (53) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement KEYWORD_ELSE statement
    (54) while_statement -> . KEYWORD_WHILE LPAREN expression RPAREN statement
    (22) do_while_statement -> . KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN SEMICOLON
    (55) for_statement -> . KEYWORD_FOR LPAREN for_init expression_opt SEMICOLON expression_opt RPAREN statement
    (23) switch_statement -> . KEYWORD_SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (28) break_statement -> . KEYWORD_BREAK SEMICOLON
    (65) return_statement -> . KEYWORD_RETURN SEMICOLON
    (66) return_statement -> . KEYWORD_RETURN expression SEMICOLON
    (67) function_call_statement -> . function_call SEMICOLON
    (83) block_statement -> . LBRACE RBRACE
    (84) block_statement -> . LBRACE statement_list RBRACE
    (2) function_definition -> . type_specifier IDENTIFIER LPAREN params RPAREN block_statement
    (35) type_specifier -> . primitive_type
    (36) type_specifier -> . array_type
    (49) left_hand_side -> . IDENTIFIER
    (50) left_hand_side -> . subscript_access
    (68) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (69) function_call -> . IDENTIFIER LPAREN RPAREN
    (70) function_call -> . SYSTEM_INPUT LPAREN IDENTIFIER COMMA type_specifier RPAREN
    (71) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier RPAREN
    (72) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier COMMA expression RPAREN
    (73) function_call -> . KEYWORD_EXIT LPAREN RPAREN
    (74) function_call -> . SYSTEM_ARR_PUSH LPAREN expression COMMA expression RPAREN
    (75) function_call -> . SYSTEM_ARR_POP LPAREN expression RPAREN
    (76) function_call -> . SYSTEM_ARR_SIZE LPAREN expression RPAREN
    (77) function_call -> . SYSTEM_ARR_CONTAINS LPAREN expression COMMA expression RPAREN
    (78) function_call -> . SYSTEM_ARR_INDEXOF LPAREN expression COMMA expression RPAREN
    (79) function_call -> . SYSTEM_ARR_AVG LPAREN expression RPAREN
    (80) function_call -> . SYSTEM_ARR_AVG LPAREN expression COMMA expression RPAREN
    (37) primitive_type -> . KEYWORD_INT
    (38) primitive_type -> . KEYWORD_FLOAT
    (39) primitive_type -> . KEYWORD_CHAR
    (40) primitive_type -> . KEYWORD_VOID
    (41) primitive_type -> . KEYWORD_STRING
    (42) primitive_type -> . KEYWORD_BOOL
    (43) primitive_type -> . KEYWORD_FILE
    (44) primitive_type -> . KEYWORD_SOCKET
    (45) primitive_type -> . KEYWORD_DICT
    (46) primitive_type -> . KEYWORD_ARRAY
    (47) array_type -> . primitive_type LBRACKET RBRACKET
    (130) subscript_access -> . IDENTIFIER LBRACKET expression RBRACKET

    $end            reduce using rule 1 (program -> statement_list .)
    KEYWORD_IF      shift and go to state 19
    KEYWORD_WHILE   shift and go to state 20
    KEYWORD_DO      shift and go to state 21
    KEYWORD_FOR     shift and go to state 22
    KEYWORD_SWITCH  shift and go to state 23
    KEYWORD_BREAK   shift and go to state 25
    KEYWORD_RETURN  shift and go to state 26
    LBRACE          shift and go to state 24
    IDENTIFIER      shift and go to state 17
    SYSTEM_INPUT    shift and go to state 31
    SYSTEM_OUTPUT   shift and go to state 32
    KEYWORD_EXIT    shift and go to state 33
    SYSTEM_ARR_PUSH shift and go to state 34
    SYSTEM_ARR_POP  shift and go to state 35
    SYSTEM_ARR_SIZE shift and go to state 36
    SYSTEM_ARR_CONTAINS shift and go to state 37
    SYSTEM_ARR_INDEXOF shift and go to state 38
    SYSTEM_ARR_AVG  shift and go to state 39
    KEYWORD_INT     shift and go to state 40
    KEYWORD_FLOAT   shift and go to state 41
    KEYWORD_CHAR    shift and go to state 42
    KEYWORD_VOID    shift and go to state 43
    KEYWORD_STRING  shift and go to state 44
    KEYWORD_BOOL    shift and go to state 45
    KEYWORD_FILE    shift and go to state 46
    KEYWORD_SOCKET  shift and go to state 47
    KEYWORD_DICT    shift and go to state 48
    KEYWORD_ARRAY   shift and go to state 49

    statement                      shift and go to state 50
    declaration_statement          shift and go to state 4
    assignment_statement           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    switch_statement               shift and go to state 10
    break_statement                shift and go to state 11
    return_statement               shift and go to state 12
    function_call_statement        shift and go to state 13
    block_statement                shift and go to state 14
    function_definition            shift and go to state 15
    type_specifier                 shift and go to state 16
    left_hand_side                 shift and go to state 18
    function_call                  shift and go to state 27
    primitive_type                 shift and go to state 28
    array_type                     shift and go to state 29
    subscript_access               shift and go to state 30

state 3

    (8) statement_list -> statement .

    KEYWORD_IF      reduce using rule 8 (statement_list -> statement .)
    KEYWORD_WHILE   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_DO      reduce using rule 8 (statement_list -> statement .)
    KEYWORD_FOR     reduce using rule 8 (statement_list -> statement .)
    KEYWORD_SWITCH  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_BREAK   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_RETURN  reduce using rule 8 (statement_list -> statement .)
    LBRACE          reduce using rule 8 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 8 (statement_list -> statement .)
    SYSTEM_INPUT    reduce using rule 8 (statement_list -> statement .)
    SYSTEM_OUTPUT   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_EXIT    reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_PUSH reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_POP  reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_SIZE reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_CONTAINS reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_INDEXOF reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_AVG  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_INT     reduce using rule 8 (statement_list -> statement .)
    KEYWORD_FLOAT   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_CHAR    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_VOID    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_STRING  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_BOOL    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_FILE    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_SOCKET  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_DICT    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_ARRAY   reduce using rule 8 (statement_list -> statement .)
    $end            reduce using rule 8 (statement_list -> statement .)
    RBRACE          reduce using rule 8 (statement_list -> statement .)
    KEYWORD_CASE    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_DEFAULT reduce using rule 8 (statement_list -> statement .)


state 4

    (10) statement -> declaration_statement .

    KEYWORD_IF      reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_WHILE   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_DO      reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_FOR     reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_SWITCH  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_BREAK   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_RETURN  reduce using rule 10 (statement -> declaration_statement .)
    LBRACE          reduce using rule 10 (statement -> declaration_statement .)
    IDENTIFIER      reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_INPUT    reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_OUTPUT   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_EXIT    reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_PUSH reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_POP  reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_SIZE reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_CONTAINS reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_INDEXOF reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_AVG  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_INT     reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_FLOAT   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_CHAR    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_VOID    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_STRING  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_BOOL    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_FILE    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_SOCKET  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_DICT    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_ARRAY   reduce using rule 10 (statement -> declaration_statement .)
    $end            reduce using rule 10 (statement -> declaration_statement .)
    RBRACE          reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_ELSE    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_CASE    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_DEFAULT reduce using rule 10 (statement -> declaration_statement .)


state 5

    (11) statement -> assignment_statement .
